fixed overflow in CSS

--- a/assets/stylesheets/timesheets.css
+++ b/assets/stylesheets/timesheets.css
@@ -1,6 +1,6 @@
 .day {
   clear:both;
-  overflow:scroll;
+  overflow:auto;
 }
 
 .day-left {
